--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -1,8 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/8/7/14/n2190778.md#1" target="_blank">济危扶困 声动华夷的义士廖有方</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/8/7/14/n2190778.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1906131453392483-150x120.jpg" align ="left"></a>唐宪宗元和乙未年（公元815年），廖有方进京赶考落第后，到四川去。走到宝鸡县西边，住进旅舍，忽然听到痛苦的呻吟声，便寻声来到隔壁的房里，看见一个穷苦的病人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 5:07 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688649.md#1" target="_blank">天地清明引(123) 明光殒－明光无华1</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688649.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1502131349102483-150x120.jpg" align ="left"></a>达湖游狂笑之间，忽见远远一人，自电闪雷鸣之间，急速而来。甫看清容貌，厉掌便至面前——“景……景阳”——掌风呼啸，震耳欲聋，山摇地动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/7/5/5/n1700065.md#1" target="_blank">漫谈中国舞：唐朝崇仙舞蹈《云韶乐》舞</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/7/5/5/n1700065.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/201910232-150x120.jpg" align ="left"></a>唐朝文宗时，下诏让太常卿冯定制作《云韶法曲》。《新唐书·礼乐志》亦记载，这个舞蹈由三百人表演，有宫廷宴席时才表演。唐《乐府杂录》记载，“乐分堂上、堂下。登歌四人，在堂下坐”，除了表演的三百人外，还有五个穿着绣花的衣服的舞童，各自手执著金莲花在前面导引，意即“执金莲花如仙家行道者”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/3/10/18/n396131.md#1" target="_blank">古代诗人的修炼故事：陈陶</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/3/10/18/n396131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/10/457898773f18046294f77674e96f0afe-150x120.png" align ="left"></a>陈陶（约812年—约885年？）字嵩伯，晚唐著名诗人。其诗“无一点尘气。于晚唐诸人中，最得平淡”[1]，《陇西行》为其传世名篇：“誓扫匈奴不顾身，五千貂锦丧胡尘。可伶无定河边骨，犹是春闺梦里人。”[2]大中时，游学长安，后隐居南昌西山。有诗集十卷，已散佚，后人辑有《陈嵩伯诗集》一卷。《全唐诗》存录其诗二卷[3]。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/9/1/21/n2404596.md#1" target="_blank">救人一方  老天爷给父亲增寿二十年</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/9/1/21/n2404596.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1412091255022483-150x120.jpg" align ="left"></a>看相的说，父亲一生救人无数，积了大德，老天爷又给增寿二十年，能活到八十四岁高寿，福荫子孙后代等等……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691292.md#1" target="_blank">纪实散文：一夜惊梦（12）</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/tu1-shutterstock_177027626-3-150x120.jpg" align ="left"></a>老周哥的故事
 一天，家中来了一男一女，一对精彩人物。男的面色黑瘦，个子高高，是回族阿訇之子。女的活泼爽利，笑语如珠，却是我汉家女子。幼承庭训，凡有客来，奉茶端水，即便退下，对先生之事向少开口。行走江湖，偶尔或露峥嵘，家门之内，一向谨守妇德。但这对异族夫妻吸引了我的注意力，端杯清茶，也坐沙发上聆听。原来男子姓周，俩人从.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:53 PM			</td></tr>
@@ -25,7 +21,11 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank">古中国最美宝镜 在日本展放大唐光彩</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/f7863197b6067c36a6b3badbfb861333-150x120.jpg" align ="left"></a>大唐文化风华霞光远射世界各地，日本的“正仓院”正是收藏一道道大唐文化绚烂霞光的聚宝库。来看古中国最美的铜镜——平螺钿背宝镜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 6:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank">他们感染瘟疫 又因何死而复生</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1610090941512483-150x120.jpg" align ="left"></a>清朝大医家刘奎著作《松峰说疫》，不仅阐述了瘟疫产生的原因，对不同的病症，还讲解了具体疗法。除了阐述医理、药性、方剂之外，他又列举了一些染疫身亡，又死而复生的例子，以举证冥冥之中存在的力量，对人命运的影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686762.md#1" target="_blank">研究：完美主义渐成社会通病 亟需干预良策</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686762.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/people-2557396_1280-150x120.jpg" align ="left"></a>一项最新研究显示，在过去的25年里，完美主义倾向者大幅增加，且无男女差异性。这一结果令研究团队深感忧虑，他们认为迫切需要采取预防措施，包括减少严厉和控制性教养方式以及社会文化影响，同时有必要对那些深陷完美主义的人进行干预。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 4:08 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/1/n11692314.md#1" target="_blank">诗歌：决裂中共</a><br></h3> 世人觉醒 决裂中共向新生 香港全民反迫害......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 10:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686738.md#1" target="_blank">如何分割时间才能提高学习效率？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_132856586_Subscription_L-150x120.jpg" align ="left"></a>一天当中每个小时段似乎都一样，其实不然。受生物钟、生理韵律、咖啡因、饮食习惯和精力消耗等诸多因素的影响，我们的学习效率在一天当中也是在不断变化的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686708.md#1" target="_blank">出国留学如何克服文化冲击</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686708.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_87638453_Subscription_L-150x120.jpg" align ="left"></a>文化冲击是在陌生环境中遇到不合时宜的感觉。到了新国家的最初兴奋渐渐消退后，你发现很多之前认为理所当然的事情在新环境下并不受到认同，这就是“文化适应”一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:47 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685078.md#1" target="_blank">【哲理轮回】塞翁失马</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/b3d95c3b7e6653bcdc22b5f38639db46-150x120.jpg" align ="left"></a>很多人都听说过“塞翁失马”的故事。这个故事说明，遇到事情不要过于悲观，也不要过于乐观，要用一种平常心对待的道理。一时看一件事情的好坏，到时候不见得就是当时所认为的好与坏。事情是随着外部环境不断发展而发生变化的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 11:14 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/18/7/10/n10552918.md#1" target="_blank">【名句故事】我辈岂是蓬蒿人</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/18/7/10/n10552918.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/28e01e5b759eff8bedf05292ca8749bd-150x120.jpg" align ="left"></a>我岂是久处草野的碌碌无为之辈？比喻踌躇滿志、高度自信的心态。语出李白《南陵别儿入京》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:08 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/24/n11677870.md#1" target="_blank">天地清明引(120) 明光殒－棠棣花凋1</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/24/n11677870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/flower-2516146_1280-150x120.jpg" align ="left"></a>白允儿回禀师父，而后回返义军，找寻白门柳。是夜，正在赶路，忽然草丛之中，燃起一个火星儿。转眼之间，四周起焰，白允儿身陷火海。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690354.md#1" target="_blank">诗歌：回首</a><br></h3> 往昔风狂雨瓢泼 满江风浪夜如何 今朝高处回首看 一路诗韵一路歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11687716.md#1" target="_blank">诗歌：感恩大法</a><br></h3>茫茫人海情缠绵，恩怨情仇迷风烟 乍惊回天梯高悬，法喜佛雨浇心田......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11687681.md#1" target="_blank">五律：钟</a><br></h3> 大音挥壮伟，高响激苍茫。 晓色敲魂梦，晚霞惊客肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:24 AM			</td></tr>
